array-tail-fix-if

--- a/array_tail/index.html
+++ b/array_tail/index.html
@@ -13,7 +13,15 @@
      <label for="elementi">Quanti elementi desideri da 1 a 100?</label>
      <input type="number" class="form-control" id="elementi">
    </div>
+  
+  <div>
+      <label for="stampare">numero di ultimi elementi da stampare,(se non compilato ne verranno stampati 5)</label>
+      <input type="number" class="form-control" id="stampare">
+  </div>
   <button class="btn btn-success" id="mybutton">invia</button>
+  <div id="data">
+
+  </div>
 
  <script src="js/script.js"></script>   
 </body>
